Fixed color contrast issue

--- a/styles.css
+++ b/styles.css
@@ -208,7 +208,7 @@
   }
   
   .title {
-    color: grey;
+    color: var(--main-black);
     font-size: 18px;
   }
 
